--- a/cover2.html
+++ b/cover2.html
@@ -23,119 +23,229 @@
                 </div>
                 <div class="department_name">Web Developer</div>
             </div>
+
             <div class="main-content">
                 <div class="content-left">
                     <div class="card-left1">
                         <span>Contacts</span>
                         <div class="content">
-                            <div class="icon1">
+                            <div class="icon">
                                 <i class="fa-solid fa-phone"></i>
                             </div>
-                            <div class="phone">
-                                <a href="callto:0716569144">
-                                    <h4>0716569144
+                            <div class="text">
+                                <a href="callto:1234678">
+                                    1234678
                                 </a>
                             </div>
                         </div>
                         <div class="content">
-                            <div class="icon2">
+                            <div class="icon">
                                 <i class="fa-solid fa-at"></i>
                             </div>
-                            <div class="email">
+                            <div class="text">
                                 <a href="mailto:rinrathana1507@gmail.com">
-                                    <h4>rinrathana1507@gmail.com
-                                </a></h4>
+                                   rinrathana1507@gmail.com
+                                </a>
                             </div>
                         </div>
                         <div class="content">
-                            <div class="icon3">
+                            <div class="icon">
                                 <i class="fa-solid fa-location-dot"></i>
                             </div>
-                            <div class="map">
+                            <div class="text">
                                 <a href="https://maps.app.goo.gl/ND9d5cSrHk5MKvd36">
-                                    <h4>Khan Sensok Phnom Penh
-                                </a></h4>
+                                    <h4>Khan Sensok Phnom Penh</h4>
+                                </a>
                             </div>
                         </div>
                     </div>
+
                     <div class="card-left2">
                         <span>Languages</span>
                         <div class="content">
-                            <div class="flag">
+                            <div class="icon">
                                 <img src="pic2.jpg" alt="">
                             </div>
                             <div class="progress">
-                                <div class="progress_bar1"></div>
+                                <div class="wrapper-progress">
+                                    <div class="progress_bar1"></div>
+                                </div>
+
                             </div>
                         </div>
                         <div class="content">
-                            <div class="flag">
+                            <div class="icon">
                                 <img src="pic1.jpg" alt="">
                             </div>
                             <div class="progress">
-                                <div class="progress_bar2"></div>
+                                <div class="wrapper-progress">
+                                    <div class="progress_bar2"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="content">
-                            <div class="flag">
+                            <div class="icon">
                                 <img src="pic3.jpg" alt="">
                             </div>
                             <div class="progress">
-                                <div class="progress_bar3"></div>
+                                <div class="wrapper-progress">
+                                    <div class="progress_bar3"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="card-left3">
-                        <span class="content1">Personalities</span>
-                        <div class="content1">
+                        <span>Personalities</span>
+                        <div class="content2">
                             <div class="icon">
                                 <i class="fa-solid fa-briefcase"></i>
                             </div>
-                            <div class="progress2">
-                                <div class="progress2_bar4"></div>
+
+                            <div class="progress">
+                                <div class="wrapper-progress">
+                                    <div class="progress2_bar1"></div>
+                                </div>
                             </div>
                         </div>
-                        <div class="content1">
+                        <div class="content2">
                             <div class="icon">
                                 <i class="fa-solid fa-car"></i>
                             </div>
-                            <div class="progress2">
-                                <div class="progress2_bar5"></div>
+                            <div class="progress">
+                                <div class="wrapper-progress">
+                                    <div class="progress2_bar2"></div>
+                                </div>
                             </div>
                         </div>
-                        <div class="content1">
+                        <div class="content2">
                             <div class="icon">
                                 <i class="fa-solid fa-headphones"></i>
                             </div>
-                            <div class="progress2">
-                                <div class="progress2_bar6"></div>
+                            <div class="progress">
+                                <div class="wrapper-progress">
+                                    <div class="progress2_bar3"></div>
+                                </div>
                             </div>
                         </div>
-                        <div class="content1">
+
+                        <div class="content2">
                             <div class="icon">
                                 <i class="fa-solid fa-person-walking"></i>
                             </div>
-                            <div class="progress2">
-                                <div class="progress2_bar7"></div>
+                            <div class="progress">
+                                <div class="wrapper-progress">
+                                    <div class="progress2_bar4"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="content-right">
                     <div class="card-right1">
-                        <span class="content">Education</span>
-                        <div class="content2"></div>
-                        <div class="content2"></div>
-                        <div class="content2"></div>
+                        <span class="content3">Education</span>
+                        <div class="content3">
+                            <div class="icon">
+                                <i class="fa-solid fa-building-columns"></i>
+                            </div>
+                            <div class="text">
+                                <span>RUPP</span>
+                            </div>
+                        </div>
+                        <div class="content3">
+                            <div class="icon">
+                                <i class="fa-solid fa-calendar-days"></i>
+                            </div>
+                            <div class="text">
+                                <span style="color: black;">2020-2022</span>
+                            </div>
+                        </div>
+                        <div class="content3">
+                            <div class="text">
+                                <ul>
+                                    <li>System Design</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content3">
+                            <div class="text">
+                                <ul>
+                                    <li>HTML, CSS, Javascript</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content3">
+                            <div class="text">
+                                <ul>
+                                    <li>Basic Algorithm</li>
+                                </ul>
+                            </div>
+                        </div>
+
                     </div>
+
                     <div class="card-right2">
-                        <!-- <div class="experiences">
-                            <span>Experiences</span>
-                        </div> -->
+                        <span class="content4">Experences</span>
+                        <div class="content4">
+                            <div class="icon">
+                                <i class="fa-solid fa-building"></i>
+                            </div>
+                            <div class="text">ABA Bank</div>
+                        </div>
+                        <div class="content4">
+                            <div class="icon">
+                                <i class="fa-solid fa-calendar-days"></i>
+                            </div>
+                            <div class="text">2018-2022</div>
+                        </div>
+                        <div class="content4">
+                            <div class="text1">
+                                <ul>
+                                    <li>Junior Dev</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content4">
+                            <div class="text1">
+                                <ul>
+                                    <li>Crud System</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div style="width: 80%; margin: 5px auto;">
+                            <hr style="border: 1px solid #EEEEEE;">
+                        </div>
+                        <div class="content4">
+                            <div class="icon">
+                                <i class="fa-solid fa-building"></i>
+                            </div>
+                            <div class="text">Canada Bank</div>
+                        </div>
+                        <div class="content4">
+                            <div class="icon">
+                                <i class="fa-solid fa-calendar-days"></i>
+                            </div>
+                            <div class="text">2022-Present</div>
+                        </div>
+                        <div class="content4">
+                            <div class="text1">
+                                <ul>
+                                    <li>Junior Dev</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="content4">
+                            <div class="text1">
+                                <ul>
+                                    <li>Crud System</li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>            
 </body>
 
 </html>
